--- a/backend/lambda_functions/item-images-crud/create-image/package.json
+++ b/backend/lambda_functions/item-images-crud/create-image/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.614.0",
+    "busboy": "^1.6.0",
     "dotenv": "^16.4.5"
   }
 }
