--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,9 @@
     "amazon-cognito-identity-js": "^6.3.12",
     "dotenv": "^16.4.5",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-lettered-avatar": "^1.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
